--- a/LED_PW_FW/STM32L031_HelloCombination/STM32L031_HelloCombination.ioc
+++ b/LED_PW_FW/STM32L031_HelloCombination/STM32L031_HelloCombination.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-I2C1.IPParameters=Timing
+I2C1.IPParameters=Timing,Speed
+I2C1.Speed=100
 I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
 Mcu.Family=STM32L0
@@ -15,19 +16,20 @@ Mcu.Name=STM32L031K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA15
-Mcu.Pin11=PB3
-Mcu.Pin12=VP_RTC_VS_RTC_Activate
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PA14
+Mcu.Pin11=PA15
+Mcu.Pin12=PB3
+Mcu.Pin13=VP_RTC_VS_RTC_Activate
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PA0-CK_IN
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA9
 Mcu.Pin6=PA10
-Mcu.Pin7=PA12
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L031K6Tx
@@ -46,6 +48,8 @@ PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
@@ -108,7 +112,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -123,7 +127,7 @@ RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
-RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCClockSelection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=37000
 RCC.LPTIMFreq_Value=32000000
 RCC.LPUARTFreq_Value=32000000
@@ -133,7 +137,7 @@ RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=32000000
 RCC.PLLMUL=RCC_PLLMUL_4
 RCC.PWRFreq_Value=32000000
-RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=32000000
